<resources>
    <string name="app_name">Calculator</string>
    <string name="calculation_result">Calculation result</string>
    <string name="result" translatable="false">0</string>
    <string name="Button1" translatable="false">1</string>
    <string name="Button2" translatable="false">2</string>
    <string name="Button3" translatable="false">3</string>
    <string name="Button4" translatable="false">4</string>
    <string name="Button5" translatable="false">5</string>
    <string name="Button6" translatable="false">6</string>
    <string name="Button7" translatable="false">7</string>
    <string name="Button8" translatable="false">8</string>
    <string name="Button9" translatable="false">9</string>
    <string name="Button0" translatable="false">0</string>
    <string name="ButtonPeriod" translatable="false">.</string>
    <string name="ButtonPlus" translatable="false">+</string>
    <string name="ButtonMinus" translatable="false">-</string>
    <string name="ButtonMultiply" translatable="false">*</string>
    <string name="ButtonDivide" translatable="false">/</string>
    <string name="ButtonEqually" translatable="false">=</string>
    <string name="ButtonClean" translatable="false">C</string>
    <string name="ButtonMPlus" translatable="false">M+</string>
    <string name="ButtonMMinus" translatable="false">M-</string>
    <string name="ButtonSquareRoot" translatable="false">√</string>
    <string name="SwitchSetting">Dark ot Light</string>
    <string name="TitleSelectTheme">Theme of select</string>
    <string name="ButtonSettings">Settings</string>
    <string name="buttonSet">Set</string>
</resources>