<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_columnSpan="4"
    android:gravity="center">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/buttonClean"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_margin="@dimen/marginButton"
            android:backgroundTint="@android:color/holo_red_light"
            android:text="@string/ButtonClean"
            android:textSize="@dimen/buttonFont"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonMPlus"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_margin="@dimen/marginButton"
            android:backgroundTint="?attr/colorSecondary"
            android:text="@string/ButtonMPlus"
            android:textSize="@dimen/buttonFont"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonMMinus"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_margin="@dimen/marginButton"
            android:backgroundTint="?attr/colorSecondary"
            android:text="@string/ButtonMMinus"
            android:textSize="@dimen/buttonFont"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonSquareRoot"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_margin="@dimen/marginButton"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:text="@string/ButtonSquareRoot"
            android:textSize="@dimen/buttonFont"
            tools:ignore="ButtonStyle" />

    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_margin="@dimen/marginButton"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="@string/Button1"
            android:textSize="@dimen/buttonFont"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_margin="@dimen/marginButton"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="@string/Button2"
            android:textSize="@dimen/buttonFont"
            android:onClick="button_onClick"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_margin="@dimen/marginButton"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="@string/Button3"
            android:textSize="@dimen/buttonFont"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonPlus"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_margin="@dimen/marginButton"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:text="@string/ButtonPlus"
            android:textSize="@dimen/buttonFont"
            tools:ignore="ButtonStyle" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_margin="@dimen/marginButton"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="@string/Button4"
            android:textSize="@dimen/buttonFont"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_margin="@dimen/marginButton"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="@string/Button5"
            android:textSize="@dimen/buttonFont"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_margin="@dimen/marginButton"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="@string/Button6"
            android:textSize="@dimen/buttonFont"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonMinus"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_margin="@dimen/marginButton"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:text="@string/ButtonMinus"
            android:textSize="@dimen/buttonFont"
            tools:ignore="ButtonStyle" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_margin="@dimen/marginButton"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="@string/Button7"
            android:textSize="@dimen/buttonFont"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_margin="@dimen/marginButton"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="@string/Button8"
            android:textSize="@dimen/buttonFont"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_margin="@dimen/marginButton"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="@string/Button9"
            android:textSize="@dimen/buttonFont"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonMultiply"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_margin="@dimen/marginButton"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:text="@string/ButtonMultiply"
            android:textSize="@dimen/buttonFont"
            tools:ignore="ButtonStyle" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"        >
        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_margin="@dimen/marginButton"
            android:layout_span="2"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="@string/Button0"
            android:textSize="@dimen/buttonFont"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonPeriod"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_margin="@dimen/marginButton"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="@string/ButtonPeriod"
            android:textSize="@dimen/buttonFont"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonDivide"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_margin="@dimen/marginButton"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:text="@string/ButtonDivide"
            android:textSize="@dimen/buttonFont"
            tools:ignore="ButtonStyle" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <Button
            android:id="@+id/buttonEqually"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_margin="@dimen/marginButton"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:text="@string/ButtonEqually"
            android:layout_span="4"
            android:textSize="@dimen/buttonFont"
            tools:ignore="ButtonStyle" />

    </TableRow>

</TableLayout>